fix: bug update user
